Infrastructure and first concrete implementation added

--- a/ChainAsAService.Components/ChainAsAService.Components.csproj
+++ b/ChainAsAService.Components/ChainAsAService.Components.csproj
@@ -1,13 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\ChainAsAService.Components\ChainAsAService.Components.csproj" />
     <ProjectReference Include="..\ChainAsAService.Core\ChainAsAService.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
